# nanogpt

./: bigram.ipynb  bigram.py  data_analysis.py  generate.py  model.py  pyproject.toml  train_gpt.py  utils.py
