[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "types-requests>=2.32.0.20241016",
]
